# release-notifier-rust

./: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debian-slim  README.md
.github/workflows/: dev-branch.yml  dev.yml  main-branch.yml  main.yml  release.yml
src/: lib.rs  main.rs
test-files/: after-message_sample.txt  before-message_sample.txt  invalid-format_changelog.md  multi-entry_changelog.md  single-entry_changelog.md
