[package]
name = "release-notifier-rust"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
regex = "1.5.6"
simple-error = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false , features = ["json", "rustls"] }